# aiges_python

./: Makefile  README.md  aiges.toml  client3.py  pyproject.toml
aiges/: __main__.py  call_wrapper.py  callback.py  client.py  dto.py  errors.py  sdk.py  serve.py  serve_new.py  server.py  server2.py  stream.py  types.py  worker.py  wrapper.py  wrapper_stream.py  wrapper_test.py
aiges/aiges_inner/: README.md  ai_service.proto  grpc_stdio_pb2.py  grpc_stdio_pb2_grpc.py
aiges/backend/: __init__.py
aiges/backup/: wrapper_mmocr.py  wrapper_old.py
aiges/client/: Readme.md  __init__.py  client.py
aiges/client/resource/: 阳光总在风雨后.pcm  阳光总在风雨后.speex-wb  阳光总在风雨后.txt
aiges/client/utils/: aipass_client.py  exception.py  h26x_client.py  nalutypes.py  ne_utils.py
aiges/cmd/: __init__.py  config.py  create.py  package.py  root.py
aiges/concurrent/: fixpool.py  pool.py
aiges/context/: __init__.py  context.py
aiges/core/: aiges_methods.py  metadata.py  rest.py
aiges/examples/stream/mmocr/: wrapper.py
aiges/gradio_util/: component.py
aiges/protocol/: struct.py  xsfcli.py
aiges/schema/: aischema.py  types.py
aiges/schema/utils/: schemaUtils.py
aiges/serve/: __init__.py  __main__.py
aiges/test_data/: flask_restx_test.py  ok.json  origin.json  pydantic_test.py  testschma.json
aiges/tests/class_func/: test_class.py  test_queue.py
aiges/tests/shared_memory/: pick_utils.py  test_pickle5.py  test_pickle5_2.py  test_share_mem.py  test_shm.py  test_shm_list.py  test_shm_ob.py
aiges/tpls/: Dockerfile.j2  Readme.md.j2  requirements.txt.j2  wrapper.py.j2
aiges/utils/: __init__.py  audit.py  audit_service.py  encode.py  flask_utils.py  log.py
aiges/utils/shm/: shm_helper.py
aiges/ws/: __init__.py  app.py  app2.py  sample.json  ws_client.py  ws_client_test.py  ws_client_test2.py
aiges/ws/tests/: __init__.py  test_button.py
aiges_python/: __main__.py  sdk.py  wrapper.py
aiges_python/v2/: demo.json  proto.py  sdk.py  wrapper.py
(+1 files in other folders)
