[tool.poetry]
name = "aiges"
version = "0.2.0"
description = "A module for test aiges's python wrapper.py"
authors = ["maybaby <ybyang7@iflytek.com>"]
license = "Apache License Version 2.0"

[tool.poetry.dependencies]
python = ">=3.7"
jinja2 = ">=2.0"
[tool.poetry.dev-dependencies]
jinja2 = ">=2.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
