[tool.poetry]
name = "aiges"
version = "0.7.6"
description = "A module for test aiges's python wrapper.py"
authors = ["maybaby <ybyang7@iflytek.com>"]
license = "Apache License Version 2.0"

[tool.poetry.dependencies]
python = ">=3.6"
jinja2 = ">=2.0"
protobuf = ">=3.19"
grpcio-health-checking = ">=1.50.0"
grpcio = ">=1.50.0"
grpcio-tools = ">=1.50.0"
plumbum = ">=1.7.0"
flask_restx = ">=1.0.0"
jsonref = ">=1.0.0"
pydantic = ">=1.8"
gradio = ">=3.0"
[tool.poetry.dev-dependencies]
jinja2 = ">=2.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
